--- a/overlay/frameworks/base/packages/SystemUI/res/color/qs_background_dark.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/color/qs_background_dark.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The CyanogenMod Project
-     Copyright (C) 2019 The LineageOS Project
+<!-- Copyright (C) 2018 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,16 +14,7 @@
      limitations under the License.
 -->
 
-<!-- Camera app resources that may need to be customized
-     for different hardware or product builds. -->
-<resources>
-
-    <!-- Enable support for camera api v2 -->
-    <bool name="support_camera_api_v2">false</bool>
-
-    <!-- Opens back camera using openLegacy() -->
-    <bool name="back_camera_open_legacy">false</bool>
-
-    <!-- Opens front camera using openLegacy() -->
-    <bool name="front_camera_open_legacy">false</bool>
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:alpha="1"
+          android:color="?android:attr/colorBackgroundFloating"/>
+</selector>
