--- a/overlay/packages/apps/Settings/res/values/arrays.xml
+++ b/overlay/packages/apps/Settings/res/values/arrays.xml
@@ -3,6 +3,7 @@
 /*
 **
 ** Copyright 2015 The Android Open Source Project
+**           2017 The LineageOS Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -17,8 +18,7 @@
 ** limitations under the License.
 */
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-
+<resources>
     <!-- IDs for each color mode. The values must match the corresponding constants in
          android.view.Display -->
     <integer-array name="color_mode_ids">
@@ -26,5 +26,4 @@
         <item>-1</item>
         <item>-1</item>
     </integer-array>
-
 </resources>
