--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -18,6 +18,12 @@
     <!-- For this option to exist and work, the parameter name must be defined -->
     <string name="incall_echo_cancellation_parameter">fluence</string>
 
+<!-- Flag indicating if network query through TelephonyManager.requestNetworkScan() should be
+         disabled.
+         If set to true, it will send network query through Phone.getAvailableNetworks() directly
+         rather than attempt to query through TelephonyManager.requestNetworkScan() first. -->
+    <bool name="config_disable_TelephonyManager_network_scan">true</bool>
+
     <!-- Paired with the above parameter, the below values will be used as enable/disable values for audiomanager.
          "incall_echo_cancellation_parameter=incall_echo_cancellation_value" will be sent directly down into the
          HAL. Size of this array must be exactly 2. -->
@@ -26,3 +32,5 @@
         <item>none</item>
     </string-array>
 </resources>
+
+
